--- a/css/style.css
+++ b/css/style.css
@@ -1,46 +1,656 @@
 @charset "UTF-8";
 
-@import url('https://fonts.googleapis.com/css2?family=Nanum+Gothic:wght@400;700;800&family=Nanum+Pen+Script&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Abel&family=Nanum+Gothic:wght@400;700;800&family=Nanum+Pen+Script&display=swap');
 
-/* font-family: 'Nanum Gothic', sans-serif;
+/* font-family: 'Abel', sans-serif;
+font-family: 'Nanum Gothic', sans-serif;
 font-family: 'Nanum Pen Script', cursive; */
 
-/* 레이아웃 */
-body{background: url(../img/bg_my.jpg) repeat-x center top;}
+/* color */
+/* 
+11052C dark
+#3D087B b
+rgba(61, 8, 123, 0.7); br
+#F43B86 r
+rgba(244,59,137,0.9);
+FFE459 yello
 
-#header{
+#b9205d drak red
+
+191, 163, 24  yello*/
+
+/* 레이아웃 */
+body {
+  background: url(../img/bg_my.jpg) repeat-x center top;
+  background-size: 100% 327px;
+}
+
+
+#header {
   height: 327px;
+}
+
+#nav {
+  background-color: #fff6fc;
+}
+
+#title {
+  background-color: #11052C;
+}
+
+#main {}
+
+/* contents */
+#contents {}
+
+#contents .container {
+  border-left: 1px solid #dbdbdb;
+  border-right: 1px solid #dbdbdb;
+  box-sizing: border-box;
+
+}
+
+#contents .container #cont_left {
+  float: left;
+  width: 250px;
+}
+
+#contents .container #cont_center {
+  box-sizing: border-box;
+  float: left;
+  border-left: 1px solid #dbdbdb;
+  border-right: 1px solid #dbdbdb;
+  width: calc(100% - 500px);
+}
+
+#contents .container #cont_right {
+  float: left;
+  width: 250px;
 }
 
 
 /* container */
-.container{
+.container {
   width: 1200px;
   margin: 0 auto;
 }
 
 /* header */
-.header{}
-.header .header_menu{
+.header {}
+
+.header .header_menu {
   text-align: right;
 }
-.header .header_menu a{
+
+.header .header_menu a {
   color: #fff;
   display: inline-block;
   padding: 8px 0 0 10px;
 }
-.header .header_menu a:hover{
+
+.header .header_menu a:hover {
   color: #ccc;
 }
 
-.header .header_tit{text-align: center;
+.header .header_tit {
+  text-align: center;
+  font-family: 'Abel', sans-serif;
+  text-transform: uppercase;
+
 }
-.header .header_tit h1{
+
+.header .header_tit h1 {
   color: #fff;
   display: inline-block;
   padding: 5px 30px;
-  background-color: #51b0bc;
+  background-color: #3D087B;
+  letter-spacing: 2px;
+  margin-top: 55px;
+  font-weight: 800;
+  transition: .6s ease-in-out;
 }
-.header .header_tit a{
+
+.header .header_tit h1:hover {
+  box-shadow: inset 130px 0 2px 2px #b9205d, inset -130px 0px 2px 2px #b9205d;
+}
+
+
+.header .header_tit a {
+  color: #fff;
+  background-color: #b9205d;
+  display: inline-block;
+  padding: 10px 20px;
+  margin-top: -7px;
+  transition: 1s ease-in-out;
+}
+
+.header .header_tit a:hover {
+  box-shadow:
+    inset 65px 26px 3px 2px rgba(191, 163, 24, 0.9),
+    inset -66px -26px 3px 2px rgba(191, 163, 24, 0.9);
+}
+
+.header .header_icon {
+  text-align: center;
+  margin-top: 40px;
+}
+
+.header .header_icon ul {}
+
+.header .header_icon ul li {
+  display: inline;
+  margin: 5px;
+}
+
+.header .header_icon ul li a {
+  position: relative;
+  display: inline-block;
+  color: #fff;
+  font-size: 35px;
+  width: 60px;
+  height: 60px;
+  background-color: #F43B86;
+  border-radius: 50%;
+  line-height: 65px;
+}
+
+.header .header_icon ul li a i {}
+
+.header .header_icon ul li a span {
+  position: absolute;
+  top: -40px;
+  left: 50%;
+  transform: translateX(-50%);
+  font-size: 12px;
+  background-color: #F43B86;
+  line-height: 1.2;
+  padding: 3px 9px;
+  border-radius: 6px 0;
+  transition: .3s;
+  opacity: 0;
+}
+
+.header .header_icon ul li:hover a span {
+  top: -30px;
+  opacity: 1;
+
+}
+
+.header .header_icon ul li a span::before {
+  content: "";
+  position: absolute;
+  bottom: -9px;
+  left: 50%;
+  transform: translateX(-50%);
+  border: 5px solid #F43B86;
+  border-left: 5px solid transparent;
+  border-right: 5px solid transparent;
+  border-bottom: 5px solid transparent;
+}
+
+
+
+/* nav 전체 메뉴 */
+#nav {}
+
+.nav {
+  display: none;
+  padding: 25px 0;
+}
+
+.nav>div {
+  float: left;
+  width: 40%;
+}
+
+.nav>div:last-child {
+  width: 20%;
+}
+
+.nav>div h3 {
+  font-size: 18px;
+  color: #F43B86;
+  font-weight: bold;
+  margin-bottom: 4px;
+}
+
+.nav>div ul {
+  overflow: hidden;
+}
+
+.nav>div ul li {
+  float: left;
+  width: 50%;
+  position: relative;
+  padding-left: 8px;
+  box-sizing: border-box;
+}
+
+.nav>div ul li::before {
+  background-color: #F43B86;
+  content: "";
+  width: 3px;
+  height: 3px;
+  position: absolute;
+  left: 0;
+  top: 8px;
+}
+
+.nav>div:last-child ul li {
+  width: 100%;
+}
+
+.nav>div ul li a {
+  /* transition: 0.3s; */
+}
+
+.nav>div ul li a::after {
+  content: "";
+  position: absolute;
+  left: 0;
+  bottom: 0;
+  width: 0%;
+  height: 1px;
+  background-color: #F43B86;
+  transition: 0.2s;
+}
+
+.nav>div ul li:hover a::after {
+  width: 60%;
+}
+
+/* 
+.nav>div ul li a:hover:after{
+  content: "";
+  border-bottom: 1px solid;
+  position: absolute;
+  left: 0;
+  height: 100%;
+  width: 60%;
+} */
+
+
+/* title */
+
+.tit {
+  position: relative;
+  text-align: center;
+  padding: 5px 0;
+}
+
+.tit h2 {
+  font-family: 'Nanum Pen Script', cursive;
+  font-size: 39px;
+  color: #FFE459;
+}
+
+.tit a {}
+
+.tit .btn {
+  position: absolute;
+  right: 0;
+  top: 5px;
+  width: 60px;
+  height: 60px;
+  border-radius: 50%;
+  background-color: #F43B86;
+  color: #fff;
+  font-size: 35px;
+  line-height: 60px;
+  transition: .3s;
+
+}
+
+.tit .btn:hover{
+  background-color: #b9205d;
+}
+
+.tit a i {}
+
+.tit a span {}
+
+
+/* 컨텐츠 영역 */
+
+.column{
+  padding: 15px;
+  border-bottom: 1px solid #dbdbdb;
+}
+.column .col_tit{
+  font-size: 20px;
+  color: #2f7fa6;
+  padding: 5px;
+}
+.column .col_desc{
+  color: #878787;
+  border-bottom: 1px dashed #dbdbdb;
+  padding-bottom: 15px;
+  margin-bottom: 15px;
+}
+
+.column.col3{
+  border-bottom: none;
+}
+.column.col6{
+  border-bottom: none;
+}
+.column.col9{
+  border-bottom: none;
+}
+
+/* menu */
+.menu{}
+.menu ul{}
+.menu ul li{}
+.menu ul li a{
+  display: block;
+  position: relative;
+  padding: 10px;
+  font-size: 16px;
+  color: #878787;
+  text-transform: uppercase;
+  border-bottom: 1px solid #dbdbdb;
+  transition: .5s;
+}
+.menu ul li a:hover{
+  background-color: rgba(244,59,137,0.9);
+  color: #fff;
+  box-shadow: inset 194px 0px 4px 2px rgba(61, 8, 123, 0.7);
+}
+.menu ul li a i{
+  position: absolute;
+  right: 10px;
+  top: 15px;
+}
+
+/* 이미지슬라이드 col4 */
+.slider{}
+.slider div{}
+.slider div figure{
+  position: relative;
+}
+.slider div figure img{}
+.slider div figure figcaption{
+  position: absolute;
+  width: 100%;
+  padding: 20px;
+  box-sizing: border-box;
+  left: 0;
+  bottom: 0;
+  color: #fff;
+  background-color: rgba(0, 0, 0, 0.5);
+  font-size: 18px;
+}
+.slider div figure figcaption em{
+  font-family: 'Abel', sans-serif;
+  opacity: 0;
+  display: block;
+  transform: translateX(50px);
+  transition: 0.9s 0.2s;
+}
+.slider div.slick-active figure figcaption em{
+  opacity: 1;
+  transform: none;
+
+}
+.slider div figure figcaption span{
+  display: block;
+  overflow: hidden;
+  text-overflow: ellipsis;
+  white-space: nowrap;
+  opacity: 0;
+  transform: translateX(50px);
+  transition: 0.9s 0.4s;
+}
+.slider div.slick-active figure figcaption span{
+  opacity: 1;
+  transform: none;
+}
+
+
+
+
+
+.slider .slick-arrow{
+  position: absolute;
+  /* transform: translateY(-50%); */
+  z-index: 30;
+  font-family: "Font Awesome 5 Free";
+  font-weight: 900;
+  color: rgba(200, 200, 200, 0.8);
+  font-size: 0;
+  visibility: hidden;
+  bottom: -8px;
+  
+
+}
+.slider .slick-prev{
+  left: 10px;
+  /* top: 50%; */
+}
+.slider .slick-prev::before{
+  content: "\f137";
+  font-size: 22px;
+  visibility: visible;
+
+}
+.slider .slick-arrow:hover{
   color: #fff;
 }
+
+
+.slider .slick-next{
+  right: 10px;
+  /* top: 50%; */
+
+}
+.slider .slick-next::before{
+  content: "\f138";
+  font-size: 22px;
+  visibility: visible;
+
+}
+
+.slider .slick-dots{
+  text-align: center;
+}
+.slider .slick-dots li{
+  display: inline-block;
+  margin: 5px;
+}
+
+.slider .slick-dots li.slick-active button{
+background-color: #F43B86;
+width: 15px;
+border-radius: 5px;
+}
+.slider .slick-dots li button{
+  font-size: 0;
+  width: 8px;
+  height: 8px;
+  background-color: #c5c5c5;
+  border-radius: 50%;
+  transition: .3s;
+}
+
+/* 라이트 갤러리 col5 */
+
+.square{
+  
+}
+.square a{
+  position: relative;
+  float: left;
+  width: 19%;
+  margin: 0.5%;
+  overflow: hidden;
+}
+.square a img{
+  display: block;
+  width: 100%;
+}
+.square a em{
+  position: absolute;
+  bottom: -25px;
+  left: 0;
+  width: 100%;
+  color: #fff;
+  background-color: rgba(0, 0, 0, 0.8);
+  text-align: center;
+  transition: .3s;
+}
+.square a:hover em{
+  bottom: 0;
+}
+.square a:nth-child(1):hover img{
+  filter: blur(2px); /* 흐림 */
+}
+.square a:nth-child(2):hover img{
+  filter: brightness(50%); /* 명도 */
+}
+.square a:nth-child(3):hover img{
+  filter: contrast(30%); /* 대비 */
+}
+.square a:nth-child(4):hover img{
+  filter: grayscale(100%); /* 회색 */
+}
+.square a:nth-child(5):hover img{
+  filter: hue-rotate(100deg); /* 색조 deg 로테이트기 때문에 회전값을 줘야한다. */
+}
+.square a:nth-child(6):hover img{
+  filter: invert(100%); /* 반전 */
+}
+.square a:nth-child(7):hover img{
+  filter: opacity(50%); /* 투명도 */
+}
+.square a:nth-child(8):hover img{
+  filter: saturate(150%); /* 채도 */
+}
+.square a:nth-child(9):hover img{
+  filter: sepia(50%); /* 적갈색 */
+}
+.square a:nth-child(10):hover img{
+  filter: sepia(120%) hue-rotate(80deg) blur(1px);
+}
+
+
+/* #lightgallery{
+  text-align: center;
+}
+#lightgallery a img{
+  width: 18%;
+} */
+
+
+
+/*--- video col6---- */
+/* 패딩과 마진의 padding margin 백분율(%) 상하좌우가 동일하게 기준이 부모의 넓이 */
+.video{
+  position: relative;
+  width: 100%;
+  padding-bottom: 56.25%;
+}
+.video iframe{
+  position: absolute;
+  left: 0;top: 0;
+  width: 100%;
+  height: 100%;
+}
+
+
+/* card col7 */
+.card{perspective: 600px;}
+.card .front{
+  transform-style: preserve-3d;
+  transform: rotateY(0deg);
+  backface-visibility: hidden;
+}
+.card .front img{}
+.card .back{
+  position: absolute;
+  top: 0;
+  text-align: center;
+  width: 100%;
+  height: 100%;
+}
+.card .back i{}
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+/* media === 넘치지 않도록 =========== */
+
+@media (max-width:1220px) {
+  .container {
+    width: 100%;
+  }
+
+  .row {
+    padding: 0 15px;
+  }
+
+  .header .header_menu {
+    padding-right: 15px;
+  }
+
+  .tit .btn {
+    right: 5px;
+  }
+}
+
+@media (max-width:1024px) {}
+
+@media (max-width:960px) {
+  .nav>div {
+    float: none;
+    width: 100%;
+  }
+
+  .nav>div:last-child {
+    width: 100%;
+  }
+
+  .nav>div ul li {
+    width: 33.3333%;
+  }
+
+  .nav>div:last-child ul li {
+    width: 33.3333%;
+  }
+}
+
+@media (max-width:768px) {}
+
+@media (max-width:600px) {
+  #header {
+    height: auto;
+  }
+
+  .header .header_tit {
+    display: none;
+  }
+
+  .header .header_icon {
+    display: none;
+  }
+
+  .tit .btn {
+    display: none;
+  }
+}
+
+@media (max-width:480px) {}
+
+@media (max-width:320px) {}
