--- a/css/style.css
+++ b/css/style.css
@@ -318,7 +318,7 @@ body {
 }
 .column .col_tit{
   font-size: 20px;
-  color: #2f7fa6;
+  color: #3D087B;
   padding: 5px;
 }
 .column .col_desc{
@@ -559,25 +559,199 @@ border-radius: 5px;
 
 
 /* card col7 */
-.card{perspective: 600px;}
+.card{perspective: 600px;
+position: relative;}
 .card .front{
+  position: relative;
+
   transform-style: preserve-3d;
   transform: rotateY(0deg);
   backface-visibility: hidden;
+  z-index: 5;
+  transition: .5s;
 }
+
+.col7 .card:hover .front{
+  transform: rotateY(180deg);
+
+}
+
+/* .card:hover .front{
+  transform: rotateY(360deg);
+} */
+
 .card .front img{}
 .card .back{
+  backface-visibility: hidden;
+  transform: rotateY(-180deg);
+  z-index: 1;
+  transform-style: preserve-3d;
   position: absolute;
-  top: 0;
+ left: 0;
+ top: 0;
+  width: 100%;
+  height: 100%;
+  /* display: flex;
+  align-items: center;
+  justify-content: center; 가능*/
+
+  background-color: #4038dc;
+  color: #fff;
+  font-size: 50px;
   text-align: center;
   width: 100%;
   height: 100%;
+  transition: .5s;
 }
-.card .back i{}
+.col7 .card:hover .back{
+  transform: rotateY(0deg);
+  z-index: 5;
+/* 같은 zindex는 동생이 힘이 더 쌔다.html상 */
+}
+.card .back i{
+  position: absolute;
 
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+}
 
+/* card2 col8 */
+.card2{
+  position: relative;
+  perspective: 600px;
+}
+.card2 figure{
+  transform-style: preserve-3d;
+  /* transition: .5s ease-in-out; */
+}
+.card2 figure img{}
+.card2 figure figcaption{
+  position: absolute;
+  left: 50%;
+  top: 50%;
+  transform: translate(-50%,-50%) translateZ(100px);
+  color: #fff;
+  width: 60%;
+  text-align: center;
+  background-color: rgba(0, 0, 0, 0.4);
+  padding: 3px 0;
+  backface-visibility: hidden;
+  
+}
+.card2 figure figcaption h3{
+}
 
+.card2 .front{
+  position: relative;
 
+  transition: .5s;
+  transform-style: preserve-3d;
+  transform: rotateY(0deg);
+  z-index: 2;
+  
+}
+.card2 .front img{}
+.card2 .front figcaption{}
+.card2 .front figcaption h3{
+  font-family: 'Abel', sans-serif;
+}
+
+.card2 .back{
+  transition: .5s;
+  z-index: 1;
+  transform-style: preserve-3d;
+  transform: rotateY(-180deg);
+  position: absolute;
+  left: 0;
+  top: 0;
+  width: 100%;
+  height: 100%;
+}
+.card2 .back img{}
+.card2 .back figcaption{}
+.card2 .back figcaption h3{}
+
+.card2:hover .front{
+  transform: rotateY(180deg);
+}
+.card2:hover .back{
+  transform: rotateY(0deg);
+  z-index: 2;
+}
+
+/* card3 col9 */
+.card3{
+  position: relative;
+  overflow: hidden;
+
+}
+.card3 figure{}
+.card3 figure img{}
+.card3 figure figcaption{
+  position: absolute;
+  left: 50%;
+  top: 50%;
+  transform: translate(200%, -50%) rotate(180deg);
+  width: 100px;
+  height: 100px;
+  background-color: #000;
+  color: #fff;
+  text-align: center;
+  border-radius: 50%;
+  transition: .5s;
+  padding-top: 12.5%;
+  box-sizing: border-box;
+}
+.card3:hover figure figcaption{
+  transform: translate(-50%, -50%) rotate(0deg);
+
+}
+
+.card3 figure figcaption h3{}
+.card3 figure figcaption h3 em{
+  display: block;
+}
+
+/* 게시판1 col2 */
+.notice1{
+  position: relative;
+}
+.notice1 h5{
+  font-size: 14px;
+  color: #3D087B;
+  padding-bottom: 5px;
+}
+.notice1 ul{
+}
+.notice1 ul li{
+  position: relative;
+  overflow: hidden;
+  text-overflow: ellipsis;
+  white-space: nowrap;
+  padding-left: 8px;
+
+}
+.notice1 ul li::before{
+  content: "";
+  position: absolute;
+  left: 0;
+  top: 8px;
+  background-color: #F43B86;
+  width: 3px;
+  height: 3px;
+}
+
+.notice1 ul li a{
+}
+.notice1 .more{
+  position: absolute;
+  right: 0;
+  top: 2px;
+}
+.notice1 .more i{
+  vertical-align: middle;
+}
 
 
 
